chore(ai/testing): rename build script to build-wdio-components; update docs and VS Code task
Rename package.json script from build-component-tests to build-wdio-components to clarify it builds components (not tests)
Update references in docs:
generation.mdx
component.mdx
context-pack.mdx
component_tests.mdx
overview.mdx
Update VS Code task label/command to use build-wdio-components
Clarify workflow wording: “Build WDIO components” before running tests

--- a/test/storybook/docs/.ai/testing/context-pack.mdx
+++ b/test/storybook/docs/.ai/testing/context-pack.mdx
@@ -33,7 +33,7 @@ A portable, framework-agnostic package of prompts, policies, scripts, and docs t
    - Use GPT-4.1 for documentation
    - Always reference `AGENT_KEYWORDS.md` for standardized prompts
 6) Build and run:
-   - Build components: `npm run build-component-tests`
+   - Build components: `npm run build-wdio-components`
    - Run tests: `npm run run-component-tests`
 
 ## Minimal prompt template
