--- a/test/storybook/docs/.ai/testing/overview.mdx
+++ b/test/storybook/docs/.ai/testing/overview.mdx
@@ -76,7 +76,7 @@ This iterative process allows us to not only achieve but also maintain high test
 To streamline the testing workflow and avoid path resolution issues, a `package.json` file with shortcut scripts is provided in the `.ai/testing` folder. These scripts automatically `cd` into the correct directory and run the required commands, ensuring consistent execution regardless of your current working directory.
 
 **How to use:**
-- Build WDIO components: `npm run build-component-tests`
+- Build WDIO components: `npm run build-wdio-components`
 - Run WDIO component tests: `npm run run-component-tests`
 - Run the component coverage script (all decorators): `npm run coverage-component-tests`
 - Run a specific coverage script (e.g., prop): `npm run coverage-prop`
