--- a/test/storybook/docs/.ai/testing/tests/component_tests.mdx
+++ b/test/storybook/docs/.ai/testing/tests/component_tests.mdx
@@ -49,7 +49,7 @@ Once you've identified the missing test cases, the next step is to create the ne
 After creating or modifying your test components, you need to build them. Run the build command from `.ai/testing`:
 
 ```bash
-npm run build-component-tests
+npm run build-wdio-components
 ```
 
 ### Step 4: Write the Tests
@@ -174,5 +174,5 @@ This pattern is simple, robust, and aligns with Stencil's architecture, making i
 - **Stencil @Method Decorator:** Only async methods (returning a Promise) are valid. Always review framework constraints and update the coverage matrix and test generation logic to exclude unsupported permutations.
 - **Matrix Validity:** Before generating tests, manually review the coverage matrix to ensure it matches the actual feature set supported by the framework. Coverage metrics are only meaningful if the matrix is correct.
 - **Consistent Test Patterns:** For WDIO component tests, use a consistent pattern (e.g., DOM update via button click) to ensure reliable automation and coverage.
-- **Build/Test Workflow:** Always follow the documented build and test workflow (`npm run build-component-tests`, then `npm run run-component-tests`). Update documentation if the process changes.
+- **Build/Test Workflow:** Always follow the documented build and test workflow (`npm run build-wdio-components`, then `npm run run-component-tests`). Update documentation if the process changes.
 - **Document Learnings:** After each coverage push, document key learnings and process changes in the audit log. This ensures continuous improvement and helps future contributors avoid past mistakes.
