--- a/test/storybook/docs/.ai/testing/overview.mdx
+++ b/test/storybook/docs/.ai/testing/overview.mdx
@@ -78,7 +78,7 @@ To streamline the testing workflow and avoid path resolution issues, a `package.
 **How to use:**
 - Build WDIO components: `npm run build-wdio-components`
 - Run WDIO component tests: `npm run run-component-tests`
-- Run the component coverage script (all decorators): `npm run coverage-component-tests`
+- Run the component coverage script (all decorators): `npm run refresh-coverage-matrix`
 - Run a specific coverage script (e.g., prop): `npm run coverage-prop`
 - Run a specific coverage script (e.g., listen): `npm run coverage-listen`
 - Run a specific coverage script (e.g., state): `npm run coverage-state`
