--- a/test/storybook/docs/.ai/testing/tests/component_tests.mdx
+++ b/test/storybook/docs/.ai/testing/tests/component_tests.mdx
@@ -35,7 +35,7 @@ Before writing any new tests, it's important to understand the current test cove
 To run the coverage script for all decorators, use the following command:
 
 ```bash
-npm run coverage-component-tests
+npm run refresh-coverage-matrix
 ```
 
 This command (run from `.ai/testing`) will analyze the existing test suite and generate a report, giving you a clear picture of where new test components are needed for full permutation coverage.
