--- a/test/storybook/docs/.ai/testing/context-pack.mdx
+++ b/test/storybook/docs/.ai/testing/context-pack.mdx
@@ -26,7 +26,7 @@ A portable, framework-agnostic package of prompts, policies, scripts, and docs t
    - Coverage script/data locations
 3) Adjust `.ai/testing/package.json` shortcuts to `cd` into the correct local folders.
 4) Run coverage from `.ai/testing` to discover gaps:
-   - All decorators: `npm run coverage-component-tests`
+   - All decorators: `npm run refresh-coverage-matrix`
    - Specific decorator (examples): `npm run coverage-prop`, `npm run coverage-state`, `npm run coverage-listen`, `npm run coverage-event`
 5) Generation loop (preferred models):
    - Use GPT-5 (Preview) for component/test generation
