--- a/test/storybook/docs/.ai/testing/overview.mdx
+++ b/test/storybook/docs/.ai/testing/overview.mdx
@@ -79,6 +79,8 @@ To streamline the testing workflow and avoid path resolution issues, a `package.
 - Build WDIO components: `npm run build-wdio-components`
 - Run WDIO component tests: `npm run run-component-tests`
 - Run the component coverage script (all decorators): `npm run refresh-coverage-matrix`
+- Run the coverage-refresh/generate/refresh loop: `npm run coverage-loop`
+- Target a specific spec/glob: `npm run run-component-tests:spec -- ./state/**/*.test.tsx`
 - Run a specific coverage script (e.g., prop): `npm run coverage-prop`
 - Run a specific coverage script (e.g., listen): `npm run coverage-listen`
 - Run a specific coverage script (e.g., state): `npm run coverage-state`
