docs(ai): add AGENT_PROMPTS and update .ai testing docs to new script/links
Add AGENT_PROMPTS.md with example prompts
Update context-pack.mdx and overview.mdx to reference prompts and refresh-coverage-matrix

--- a/test/storybook/docs/.ai/testing/context-pack.mdx
+++ b/test/storybook/docs/.ai/testing/context-pack.mdx
@@ -66,3 +66,4 @@ A portable, framework-agnostic package of prompts, policies, scripts, and docs t
 - [Audit](?path=/docs/testing-framework-audit--docs)
 - [Coverage Matrix: Overview](?path=/docs/testing-framework-coverage-matrix-overview--docs)
 - [@Component Strategy](?path=/docs/testing-decorators-component--docs)
+- Example Prompts: `.ai/testing/AGENT_PROMPTS.md`
