--- a/test/storybook/docs/.ai/testing/overview.mdx
+++ b/test/storybook/docs/.ai/testing/overview.mdx
@@ -75,6 +75,8 @@ This iterative process allows us to not only achieve but also maintain high test
 
 To streamline the testing workflow and avoid path resolution issues, a `package.json` file with shortcut scripts is provided in the `.ai/testing` folder. These scripts automatically `cd` into the correct directory and run the required commands, ensuring consistent execution regardless of your current working directory.
 
+See also: Example Prompts at `.ai/testing/AGENT_PROMPTS.md`.
+
 **How to use:**
 - Build WDIO components: `npm run build-wdio-components`
 - Run WDIO component tests: `npm run run-component-tests`
