docs(quickstart): verify before build; add compiler-error recovery; generalize across decorators
Move verify-matrix before build in the loop
Add guidance to tweak rules → coverage-loop → verify → build on compiler errors
Make instructions decorator-agnostic (use @Component only as an example)
Update targeted spec example and guardrails wording
File: quickstart.mdx

--- a/test/storybook/docs/.ai/testing/context-pack.mdx
+++ b/test/storybook/docs/.ai/testing/context-pack.mdx
@@ -65,5 +65,6 @@ A portable, framework-agnostic package of prompts, policies, scripts, and docs t
 - [Overview](?path=/docs/testing-framework-overview--docs)
 - [Audit](?path=/docs/testing-framework-audit--docs)
 - [Coverage Matrix: Overview](?path=/docs/testing-framework-coverage-matrix-overview--docs)
+- [Quickstart: Coverage → Generate → Verify](?path=/docs/testing-framework-quickstart--docs)
 - [@Component Strategy](?path=/docs/testing-decorators-component--docs)
 - Example Prompts: `.ai/testing/AGENT_PROMPTS.md`
