--- a/test/storybook/docs/.ai/testing/overview.mdx
+++ b/test/storybook/docs/.ai/testing/overview.mdx
@@ -71,6 +71,9 @@ A groundbreaking aspect of our testing strategy is its reliance on a GenAI-power
 
 This iterative process allows us to not only achieve but also maintain high test coverage over time, adapting as new features and variations are introduced while continuously improving our methodology.
 
+## Quickstart
+For a concise, step‑by‑step loop, see [Quickstart: Coverage → Generate → Verify](?path=/docs/testing-framework-quickstart--docs).
+
 ## Running Scripts with package.json Shortcuts
 
 To streamline the testing workflow and avoid path resolution issues, a `package.json` file with shortcut scripts is provided in the `.ai/testing` folder. These scripts automatically `cd` into the correct directory and run the required commands, ensuring consistent execution regardless of your current working directory.
