Simplify file names

--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -1,6 +1,6 @@
 import componentData from './component-coverage-data.json';
 import propData from './prop-coverage-data.json';
-import stateData from './State/state-coverage-data.json';
+import stateData from './State/coverage-data.json';
 import eventData from './event-coverage-data.json';
 import listenData from './listen-coverage-data.json';
 import methodData from './method-coverage-data.json';
