Group @Component files under a sub folder

--- a/test/storybook/docs/Testing/Decorators/Component/@Component.mdx
+++ b/test/storybook/docs/Testing/Decorators/Component/@Component.mdx
@@ -1,5 +1,8 @@
-import rules from './component-rules.json';
-import data from './component-coverage-data.json';
+import rules from './rules.json';
+import { Meta } from '@storybook/addon-docs/blocks';
+import data from './coverage-data.json';
+
+<Meta title="Testing/Decorators/@Component"/>
 
 # @Component Testing Matrix
 
