--- a/test/storybook/docs/Testing/Decorators/State/@State.mdx
+++ b/test/storybook/docs/Testing/Decorators/State/@State.mdx
@@ -1,4 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
 import data from './coverage-data.json';
+
+<Meta title="Testing/Decorators/@State"/>
 
 # @State Testing Matrix
 
